--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
             <input type="text" id="todo" name="todo" size="20">
             <button>Add</button>
         </div>
-
-        <div class="task-container">
-            <div class="todo-text">
-                Buy milk
+        <div class="tasks-container">
+            <div class="task-container">
+                <!-- <div class="task"> -->
+                <div class="todo-text">
+                    Buy milk
+                </div>
+                <img class="delete" src="\delete_icon.svg" alt="delete" onclick="">
+                <img class="done" src="\done_icon.svg" alt="done" onclick="lineThrough(this)">
+                <!-- </div> -->
             </div>
-            <img class="delete" src="\delete_icon.svg" alt="delete" onclick="">
-            <img class="done" src="\done_icon.svg" alt="done" onclick="lineThrough(this)">
         </div>
 
 
