--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
         </div>
         <div class="tasks-container">
             <div class="task-container">
-                <!-- <div class="task"> -->
                 <div class="todo-text">
                     Buy milk
                 </div>
                 <img class="delete" src="\delete_icon.svg" alt="delete" onclick="">
-                <img class="done" src="\done_icon.svg" alt="done" onclick="lineThrough(this)">
-                <!-- </div> -->
+                <img class="done" src="\done_icon.svg" alt="done" onclick="">
             </div>
         </div>
 
