--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         </div>
         <div class="tasks-container">
             <div class="task-container">
+            </div>
+            <div class="task-container">
                 <div class="todo-text">
                     Buy milk
                 </div>
-                <img class="delete" src="\delete_icon.svg" alt="delete" onclick="">
-                <img class="done" src="\done_icon.svg" alt="done" onclick="">
+                <img class="delete" src="delete_icon.svg" alt="delete" onclick="">
+                <img class="done" src="done_icon.svg" alt="done" onclick="">
             </div>
         </div>
 
